src/test/resources/public/input/typechecking/fail/double_decl/fail09.jova
class Test{
  public int foo(int x, int x){
    return 0;
  }
}

class Main {

  public int main() {
    return 0;
  }

}